--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="zip">Zip</string>
     <string name="click_here_to_execute">Click to Execute</string>
     <string name="operators">Operators</string>
+    <string name="disposable">Disposable</string>
 </resources>
