Added Interval operator definition in ReadMe

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="disposable">Disposable</string>
     <string name="flatmap">FlatMap</string>
     <string name="interval">Interval</string>
+    <string name="take">Take</string>
 </resources>
