Added Timer and Take Operator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="flatmap">FlatMap</string>
     <string name="interval">Interval</string>
     <string name="take">Take</string>
+    <string name="timer">Timer</string>
 </resources>
