Added Debounce Operator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="interval">Interval</string>
     <string name="take">Take</string>
     <string name="timer">Timer</string>
+    <string name="debounce">Debounce</string>
 </resources>
