--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="take">Take</string>
     <string name="timer">Timer</string>
     <string name="debounce">Debounce</string>
+    <string name="single">SingleObserver</string>
 </resources>
