--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="timer">Timer</string>
     <string name="debounce">Debounce</string>
     <string name="single">Single Observer</string>
+    <string name="CompletableObserver">Completable Observer</string>
+    <string name="flowable">Flowable</string>
 </resources>
