--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="flowable">Flowable</string>
     <string name="reduce">Reduce</string>
     <string name="buffer">Buffer</string>
+    <string name="filter">Filter</string>
+    <string name="skip">Skip</string>
 </resources>
