Added Scan Operator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="buffer">Buffer</string>
     <string name="filter">Filter</string>
     <string name="skip">Skip</string>
+    <string name="scan">Scan</string>
 </resources>
