--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="skip">Skip</string>
     <string name="scan">Scan</string>
     <string name="replay">Replay</string>
+    <string name="concat">Concat</string>
 </resources>
