--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="scan">Scan</string>
     <string name="replay">Replay</string>
     <string name="concat">Concat</string>
+    <string name="merge">Merge</string>
 </resources>
