--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="replay_subject">Replay Subject</string>
     <string name="publish_subject">Publish Subject</string>
     <string name="behavior_subject">Behaviour Subject</string>
+    <string name="async_subject">Async Subject</string>
 </resources>
