--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="async_subject">Async Subject</string>
     <string name="throttle">Throttle First</string>
     <string name="throttle_last">Throttle Last</string>
+    <string name="window">Window</string>
 </resources>
