--- a/RxOperators/src/main/res/values/strings.xml
+++ b/RxOperators/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="delay">Delay</string>
     <string name="rxpagination">RxPagination</string>
     <string name="rxbinding">RxBinding</string>
+    <string name="retry">Retry</string>
 </resources>
